# tensorrtx

./: .clang-format  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  windows编译运行手把手教程.md
DBNet/: CMakeLists.txt  README.md  common.hpp  dbnet.cpp  utils.h
HRNetClassification/: CMakeLists.txt  demo.py  hrnet.cpp  readme.md  使用TRT加速网络-零.md
LPRnet/: CMakeLists.txt  LPRnet.cpp  README.md
YoloV7-Tensorrt-MultiThread/: CMakeLists.txt  README.md  logging.h  yololayer.h  yolov7.cpp  yolov7_trt.py  yolov7_trt_test.py
alexnet/: CMakeLists.txt  README.md  alex.cpp  alexnet.cc  alexnet.py  gen_wts.py  macros.h  utils.h
arcface/: CMakeLists.txt  README.md  arcface-mobilefacenet.cpp  arcface-r100.cpp  arcface-r50.cpp  gen_wts.py  prelu.cu  prelu.h
assets/: 6.pgm
centernet/: README.md  centernet.py
convnextv2/: CMakeLists.txt  README.md  config.yaml  gen_wts.py  inference.py
convnextv2/src/: LayerNormPlugin.cu  LayerNormPlugin.h  convnextv2.cpp  inference_cpp.cpp  logging.h
crnn/: CMakeLists.txt  README.md  crnn.cpp  genwts.py  logging.h
csrnet/: CMakeLists.txt  README.md  config.h  csrnet.cpp  gen_wts.py
dbnet/: CMakeLists.txt  README.md  common.hpp  dbnet.cpp
dbnet/clipper/: CMakeLists.txt  clipper.cpp
densenet/: CMakeLists.txt  README.md  densenet121.cpp  densenet121.py
detr/: CMakeLists.txt  README.md  backbone.hpp  calibrator.hpp  common.hpp  detr.cpp  gen_wts.py  logging.h  macros.h
docker/: .env  README  README.md  tensorrtx-docker-compose.yml  x86_64.dockerfile
efficient_ad/: CMakeLists.txt  efficientAD_det.cpp  readme.md
efficient_ad/datas/models/: gen_wts.py
efficient_ad/src/: config.h  model.cpp  model.h  postprocess.h  utils.h
efficientnet/: CMakeLists.txt  README.md  efficientnet.cpp  gen_wts.py  utils.hpp
ghostnet/: CMakeLists.txt  README.md  gen_wts.py  ghostnet.cpp
googlenet/: CMakeLists.txt  FindTensorRT.cmake  README.md  gen_wts.py  googlenet.cpp  utils.h
hrnetseg/: CMakeLists.txt  README.md  demo.py
ibnnet/: CMakeLists.txt  InferenceEngine.cpp  InferenceEngine.h  README.md  gen_wts.py  ibnnet.cpp  ibnnet.h  layers.cpp  layers.h  main.cpp  utils.cpp  utils.h
inceptionv3/: CMakeLists.txt  inception_v3.cpp
inceptionv4/: CMakeLists.txt  README.md  engine.h  inception_v4.cpp  inception_v4.h  layers_api.cpp  layers_api.h  logging.h  main.cpp  utils.h
lane_det/: CMakeLists.txt  README.md  lane_det.cpp
lenet/: CMakeLists.txt  FindTensorRT.cmake  README.md  gen_wts.py  lenet.cpp  lenet.py  lenet_tripy.py  logging.h  main.cpp  utils.h
lprnet/: CMakeLists.txt  LPRnet.cpp  README.md  gen_wts.py  genwts.py  lprnet.cpp  utils.h
mlp/: CMakeLists.txt  FindTensorRT.cmake  README.md  mlp.cpp  mlp.py  mlp.wts  utils.h
mnasnet/: CMakeLists.txt  FindTensorRT.cmake  README.md  gen_wts.py  macros.h  mnasnet.cpp  utils.h
mobilenet/: mobilenet_v2.cpp
mobilenetv2/: CMakeLists.txt  common.h  mobilenet_v2.cpp  mobilenet_v2.py
mobilenetv3/: CMakeLists.txt  README.md  h_sigmoid.cu  h_sigmoid.cuh  h_sigmoidplugin.cpp  h_sigmoidplugin.h  mobilenet_v3.cpp
ppocrv5/: CMakeLists.txt  README.md  gen_wts.py  ppocr_system.cpp  ppocrv5_det.cpp  ppocrv5_dump.cpp  ppocrv5_formula.cpp  ppocrv5_model.cpp  ppocrv5_ocr.cpp  ppocrv5_rec.cpp
ppocrv5/include/: block.h  calibrator.h  config.h  cuda_utils.h  logging.h  model.h  postprocess.h  preprocess.h  types.h  utils.h
ppocrv5/plugin/: ppocrv5_db_layer.cu  ppocrv5_db_layer.h  ppocrv5_rtdetr_layer.cu  ppocrv5_rtdetr_layer.h
ppocrv5/samples/validation/: README.md
ppocrv5/src/: block.cpp  calibrator.cpp  model.cpp  postprocess.cpp  preprocess.cu  utils.cpp
psenet/: CMakeLists.txt  README.md  common.h  gen_tf_wts.py  layers.cpp  layers.h  main.cpp  psenet.cpp  psenet.h  utils.cpp  utils.h
rcnn/: BatchedNms.cu  BatchedNmsPlugin.h  CMakeLists.txt  MaskRcnnInference.cu  MaskRcnnInferencePlugin.h  PredictorDecode.cu  PredictorDecodePlugin.h  README.md  RoiAlign.cu  RoiAlignPlugin.h  RpnDecode.cu  RpnDecodePlugin.h  RpnNms.cu  RpnNmsPlugin.h  backbone.hpp  calibrator.hpp  common.hpp  cuda_utils.h  gen_wts.py  logging.h  macros.h  rcnn.cpp
rcnn/rcnn_trt78/: BatchedNms.cu  PredictorDecode.cu  RoiAlign.cu  RoiAlignPlugin.h  RpnDecode.cu  macros.h
real-esrgan/: CMakeLists.txt  README.md  common.hpp  cuda_utils.h  gen_wts.py  postprocess.cu  postprocess.hpp  preprocess.cu  preprocess.hpp  real-esrgan.cpp  utils.h
real-esrgan-general-x4v3/: main.cpp
refinedet/: CMakeLists.txt  README.md  calibrator.cpp  configure.h  gen_wts_refinedet.py  logging.h  refinedet.cpp  utils.h
regnet/: CMakeLists.txt  README.md  regnet.cpp  regnet.py  save_pth_model.py  save_wts_models.py
repvgg/: CMakeLists.txt  README.md  gen_wts.py  logging.h  repvgg.cpp
resnet/: CMakeLists.txt  README.md  resnet18.cpp  resnet34.cpp  resnet50.cpp  resnet50.py  resnext50_32x4d.cpp  wide_resnet50.py  wideresnet50.cpp
retinaface/: CMakeLists.txt  README.md  calibrator.cpp  calibrator.h  common.hpp  decode.cu  decode.h  logging.h  plugin_factory.cpp  retina_mnet.cpp  retina_r50.cpp  retinaface_trt.py
retinafaceAntiCov/: CMakeLists.txt  README.md  decode.cu  decode.h  gen_wts.py  logging.h  retinafaceAntiCov.cpp
scaled-yolov4/: CMakeLists.txt  README.md  common.hpp  gen_wts.py  mish.cu  mish.h  utils.h  yololayer.cu  yololayer.h  yolov4_csp.cpp
senet/: CMakeLists.txt  README.md  se_resnet50.cpp
shufflenet/: README.md  chunk.h
shufflenetv2/: CMakeLists.txt  README.md  chunk.cpp  gen_wts.py  shufflenet_v2.cpp  shufflenetv2.cpp  utils.h
squeezenet/: CMakeLists.txt  README.md  gen_wts.py  squeezenet.cpp  utils.h
ssd/: README.md  box_utils.h  gen_wts.py
ssdmobilenetv2/: CMakeLists.txt  README.md  box_utils.cpp  ssd_mobilenet_v2.cpp
superpoint/: CMakeLists.txt  README.md  gen_wts.py  logging.h  supernet.cpp  utils.cpp  utils.h
swin-transformer/: README.md  UpsampleKernel.cu  gen_wts.py  utilsn.h
tsm/: .gitignore  CMakeLists.txt  README.md  demo.sh  gen_wts.py  mmaction2_tsm_r50_config.py  test_shift.py  tsm_r50.cpp  tsm_r50.py
tutorials/: contributing.md  faq.md  (+10 more)
(+549 files in other folders)
